--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -1,24 +1,13 @@
 @import url("/styles/msg-style.css");
 
-body {
-	display:flex;
-	flex-direction: column;
-
-	background-color: var(--bkg-color);
-	font-family: 'monospace';
-}
-
-main {
-	margin: auto;
-	width: 50vw;
-}
+main { margin: auto; width: 50vw; }
 
 #chat-title {
+	width: fit-content;
+	margin: 2rem auto 4rem auto;
 	font-size: 3rem;
 	font-weight: 800;
 	color: var(--hi-fnt-color);
-
-	margin: 2rem auto 4rem auto;
 }
 
 #chat-box {
@@ -32,7 +21,7 @@ main {
 	border-radius: 8px 8px 4px 4px;
 }
 
-#box__input-msg {
+#msg-form {
 	display:flex;
 	gap: 16px;
 	
@@ -52,7 +41,6 @@ main {
 
 	color: white;
 	font-size: 1rem;
-	font-family: 'monospace';
 }
 
 #input-btn {
